@@ -51,6 +51,9 @@ Release 0.21.1 - Unreleased
     HADOOP-7174. Null is displayed in the "fs -copyToLocal" command.
     (Uma Maheswara Rao G via szetszwo)
 
+    HADOOP-7194. Fix resource leak in IOUtils.copyBytes(..).
+    (Devaraj K via szetszwo)
+
 Release 0.21.0 - 2010-08-13
 
   INCOMPATIBLE CHANGES
